fix: modifier to prevent word wrapping only in main title of page on desktop

--- a/styles/base.css
+++ b/styles/base.css
@@ -69,8 +69,11 @@ section.section--center {
 .content__title {
   font-weight: 700;
   font-size: 96px;
-  white-space: nowrap;
   margin-bottom: 20px;
+}
+
+.content__title.title--nowrap {
+  white-space: nowrap;
 }
 
 .content__title.title--not-marg {
